<resources>
    <string name="app_name">Fix It</string>
    <string name="FixIt">Fix-It</string>
    <string name="button_order_fix">Click Here To Order A Fix</string>
    <string name="NewOrder">New Fix Order</string>
    <string name="RadioButton1">Renovation Services</string>
    <string name="RadioButton2">Plumbing Services</string>
    <string name="RadioButton3">Electrian Services</string>
    <string name="Catagory1">Please Choose Your Service :</string>
    <string name="Next">Next</string>
    <string name="callButton">Call Button</string>
    <string name="Back">Back</string>
    <string name="Thanks">Thank You For Your Order!</string>
    <string name="Thanks2">The Professional Will Arrive In Few Minutes</string>
    <string name="RateUs">Rate-Us!</string>
    <string name="Catagory2">Please Enter Location :</string>
    <string name="Loc1">Rishon Letzion</string>
    <string name="Detail">"Order Details : "</string>
    <string name="SubBut">Submit</string>
    <string name="Score">Your Rating Will Appear Here</string>
    <string name="OrderDetails">Your Order Details Will Show Up Here</string>
    <string name="Apply">Apply</string>
    <string name="Rishon.Letzion">Rishon Letzion</string>

    <string-array name="city">
        <item>@string/Rishon.Letzion</item>
        <item>@string/Holon</item>
        <item>@string/Tel.Aviv</item>
        <item>@string/Ashdod</item>
        <item>@string/Jerusalem</item>
        <item>@string/Eilat</item>
        <item>@string/Haifa</item>
        <item>@string/Ramla</item>
    </string-array>
    <string name="city">Cities</string>
    <string name="Holon">Holon</string>
    <string name="Tel.Aviv">Tel Aviv</string>
    <string name="Ashdod">Ashdod</string>
    <string name="Jerusalem">Jerusalem</string>
    <string name="Eilat">Eilat</string>
    <string name="Haifa">Haifa</string>
    <string name="Ramla">Ramla</string>
    <string name="Rating">Your Rating Is :</string>
</resources>